--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=go-example
-sonar.projectName=go-example
+sonar.projectKey=go-example-M
+sonar.projectName=go-example-M
 sonar.projectVersion=1.0
 
 sonar.sources=api
